Fixes issue with previews info bar not shown for redirect nav

There is an issue with not having the previews state bits cleared
per server previews response headers in the UI thread. This causes
an issue for an HTTP->HTTPS redirection that preforms NoScript
preview - the previews state confused the PreviewsInfoBarTabHelper.
This is a patch to fix M64 Dev channel. The proper fix (setting
previews state consistently is a separate change in progress for
M65).

Bug: 792275
Change-Id: I28788c608ef37f208edbc72df7602294f56995f5
Reviewed-on: https://chromium-review.googlesource.com/811626
Reviewed-by: Ryan Sturm <ryansturm@chromium.org>
Commit-Queue: Doug Arnett <dougarnett@chromium.org>
Cr-Commit-Position: refs/heads/master@{#522170}
Former-commit-id: fc89e8f72e41fb56e11c1ecc14a04054f54187c5